[gd_scene load_steps=6 format=3 uid="uid://cgbyrfskejfog"]

[ext_resource type="Script" uid="uid://ddkv7ahv2r07t" path="res://scripts/splitscreen.gd" id="1_e0shh"]
[ext_resource type="Script" uid="uid://l7eqwyhghkmm" path="res://scripts/game.gd" id="1_gnrjp"]
[ext_resource type="Script" uid="uid://caq3jitipqv6b" path="res://scripts/camera_1.gd" id="1_ol4fa"]
[ext_resource type="Script" uid="uid://bdusnje0f81r8" path="res://scripts/canvaslayer.gd" id="2_hsxpx"]
[ext_resource type="Script" uid="uid://btxicqyeaxyvv" path="res://scripts/camera_2.gd" id="4_1x333"]

[node name="Game" type="Node"]
script = ExtResource("1_gnrjp")

[node name="Splitscreen" type="Node2D" parent="."]
script = ExtResource("1_e0shh")

[node name="CanvasLayer" type="CanvasLayer" parent="Splitscreen"]
script = ExtResource("2_hsxpx")

[node name="HBoxContainer" type="HBoxContainer" parent="Splitscreen/CanvasLayer"]
custom_minimum_size = Vector2(1804, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer1" type="SubViewportContainer" parent="Splitscreen/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport1" type="SubViewport" parent="Splitscreen/CanvasLayer/HBoxContainer/SubViewportContainer1"]
handle_input_locally = false
size = Vector2i(900, 648)
render_target_update_mode = 4

[node name="Camera1" type="Camera2D" parent="Splitscreen/CanvasLayer/HBoxContainer/SubViewportContainer1/SubViewport1"]
zoom = Vector2(1.4, 1.4)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("1_ol4fa")

[node name="SubViewportContainer2" type="SubViewportContainer" parent="Splitscreen/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport2" type="SubViewport" parent="Splitscreen/CanvasLayer/HBoxContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(900, 648)
render_target_update_mode = 4

[node name="Camera2" type="Camera2D" parent="Splitscreen/CanvasLayer/HBoxContainer/SubViewportContainer2/SubViewport2"]
zoom = Vector2(1.4, 1.4)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("4_1x333")
